[tool.poetry]
name = "apihub"
version = "0.1.2"
description = "a API gateway on top of Redis"
license = "MIT"
authors = ["Yifan Zhang <freqyifan@gmail.com>"]
readme = "README.rst"

[tool.poetry.scripts]
apihub_server = "apihub.server:main"
apihub_result = "apihub.result:main"
apihub_worker = "apihub.worker:main"
apihub_cli = "apihub.cli:cli"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, E266, E402, E501, W503, F403, F401"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[tool.pytest.ini_options]
python_files = "*.py"
addopts = "--color=yes -p no:warnings --doctest-modules --ignore=templates --ignore=static --doctest-glob *.rst"
doctest_optionflags= "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.poetry.dependencies]
python = "^3.7"
prometheus-client = ">=0.7.0,<0.8.0"
redis = "^4.0.0"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
fastapi-jwt-auth = "^0.5.0"
psycopg2-binary = "^2.8.6"
SQLAlchemy = "^1.4.15"
SQLAlchemy-Utils = "^0.37.4"
python-multipart = "^0.0.5"
apihub-users = {git = "https://github.com/yifan/apihub-users", rev = "develop"}
#apihub-users = {path = "../apihub-users", develop = true}
pipeline = {git = "https://github.com/yifan/pipeline", rev = "master", extras = ["redis"]}
#pipeline = {path = "../pipeline", develop = true}
jsonschema = "^3.2.0"
typer = "^0.4.0"
orjson = "^3.6.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.13.0"
pytest-asyncio = "^0.15.1"
pytest-dotenv = "^0.5.2"
factory-boy = "^3.2.0"
requests = "^2.25.1"
mypy = "^0.812"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
